feat: add header

--- a/quizzes.html
+++ b/quizzes.html
@@ -2,17 +2,41 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ваши квизы</title>
-    <link
-      rel="stylesheet"
-      href="./css/pages/quizzes.css" />
+    <link rel="stylesheet" href="/css/base/variables.css" />
+    <link rel="stylesheet" href="/css/base/base.css" />
+    <link rel="stylesheet" href="/css/components/header.css" />
+    <link rel="stylesheet" href="/css/components/button.css" />
+    <link rel="stylesheet" href="./css/pages/quizzes.css" />
   </head>
   <body>
-    <script
-      type="module"
-      src="./js/pages/quizzes.js"></script>
+    <script type="module" src="./js/pages/quizzes.js"></script>
+    <div class="page-wrapper">
+      <header class="header" role="banner">
+        <a href="/" class="header__logo-link" aria-label="На главную">
+          <img src="/assets/logo.svg" class="header__logo" alt="Quiz App" />
+        </a>
+
+        <a href="#" class="header__action-btn button"></a>
+
+        <button
+          class="header__burger"
+          aria-label="Открыть меню"
+          aria-expanded="false"
+          type="button"
+        >
+          <img src="/assets/burger.svg" class="header__burger-icon" alt="" />
+          <img src="/assets/cross.svg" class="header__burger-cross" alt="" />
+        </button>
+
+        <!-- Mobile menu -->
+        <nav class="header__nav header__nav--mobile" aria-hidden="true">
+          <template id="header-nav-link-template">
+            <a class="header__nav-link" href="#">Ссылка</a>
+          </template>
+        </nav>
+      </header>
+    </div>
   </body>
 </html>
