fix(styles): increase bem compliance

--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
           <img src="/assets/logo.svg" class="header__logo" alt="Quiz App" />
         </a>
 
-        <a href="#" class="header__action-btn button"></a>
+        <a href="#" class="header__action button"></a>
 
         <button
           class="header__burger"
