--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
       </header>
 
       <main class="quiz-generator">
-        <h1 class="quiz-generator__title text-h1">Генератор квизов</h1>
-        <p class="quiz-generator__subtitle text-body">Вставьте JSON…</p>
+        <h1 class="quiz-generator__title text--h1">Генератор квизов</h1>
+        <p class="quiz-generator__subtitle text--body">Вставьте JSON…</p>
         <form class="json-form">
-          <label for="json-textarea" class="json-form__label text-caption"
+          <label for="json-textarea" class="json-form__label text--caption"
             >Ваш JSON</label
           >
           <textarea
             id="json-textarea"
-            class="json-form__textarea text-mono"
+            class="json-form__textarea text--mono"
           ></textarea>
           <button class="json-form__submit button button--primary">
             Сгенерировать
