--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
           <textarea
             id="json-textarea"
             class="json-form__textarea text--mono"
+            placeholder="{
+«title»: «Placeholder»,
+«questions»: []
+}"
           ></textarea>
           <button class="json-form__submit button button--primary">
             Сгенерировать
