--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <h1 class="quiz-generator__title text--h1">Генератор квизов</h1>
         <p class="quiz-generator__subtitle text--body">Вставьте JSON…</p>
         <form class="json-form">
-          <label for="json-textarea" class="json-form__label text--caption"
-            >Ваш JSON</label
-          >
+          <label for="json-textarea" class="json-form__label text--caption">
+            Ваш JSON
+          </label>
           <textarea
             id="json-textarea"
             class="json-form__textarea text--mono"
