feat(quizzes): add quizzes page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Генератор квизов</title>
     <link rel="stylesheet" href="/css/base/variables.css" />
     <link rel="stylesheet" href="/css/base/base.css" />
-    <link rel="stylesheet" href="/css/components/header.css" />
     <link rel="stylesheet" href="/css/components/button.css" />
+    <link rel="stylesheet" href="/css/components/header.css" />
+
     <link rel="stylesheet" href="/css/components/jsonForm.css" />
     <link rel="stylesheet" href="/css/components/toast.css" />
     <link rel="stylesheet" href="./css/pages/index.css" />
@@ -40,9 +41,9 @@
         </nav>
       </header>
 
-      <main class="quiz-generator">
-        <h1 class="quiz-generator__title text--h1">Генератор квизов</h1>
-        <p class="quiz-generator__subtitle text--body">Вставьте JSON…</p>
+      <main class="main-content">
+        <h1 class="main-content__title text--h1">Генератор квизов</h1>
+        <p class="main-content__subtitle text--body">Вставьте JSON…</p>
         <form class="json-form">
           <label for="json-textarea" class="json-form__label text--caption">
             Ваш JSON
