--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="toast" role="alert">
         <div class="toast__content">
           <span>❌</span>
-          <p class="toast__message">Ошибка: не удалось обработать JSON.</p>
+          <p class="toast__message"></p>
           <p class="text--caption">
             Проверьте формат данных и попробуйте снова.
           </p>
