--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <script type="module" src="./js/pages/main.js"></script>
 
-    <div class="page-wrapper">
+    <div class="page">
       <header class="header" role="banner">
         <a href="/" class="header__logo-link" aria-label="На главную">
           <img src="/assets/logo.svg" class="header__logo" alt="Quiz App" />
@@ -41,9 +41,9 @@
         </nav>
       </header>
 
-      <main class="main-content">
-        <h1 class="main-content__title text--h1">Генератор квизов</h1>
-        <p class="main-content__subtitle text--body">Вставьте JSON…</p>
+      <main class="quiz-generator">
+        <h1 class="quiz-generator__title text--h1">Генератор квизов</h1>
+        <p class="quiz-generator__subtitle text--body">Вставьте JSON…</p>
         <form class="json-form">
           <label for="json-textarea" class="json-form__label text--caption">
             Ваш JSON
